--- a/.tmp/window_state.config.json
+++ b/.tmp/window_state.config.json
@@ -1,1 +1,1 @@
-{"height":500,"maxHeight":-1,"maxWidth":-1,"maximize":false,"minHeight":200,"minWidth":400,"resizable":true,"width":800,"x":494,"y":384}
+{"height":1150,"maxHeight":-1,"maxWidth":-1,"maximize":true,"minHeight":200,"minWidth":400,"resizable":true,"width":1942,"x":-11,"y":-11}
